--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   width: 400px;
   height: 400px;
   background-color: red;
-  position: relative;
+
 }
 
 .two {
@@ -17,17 +17,18 @@ body {
   height: 300px;
   background-color: yellow;
   position: absolute;
-  top: 50px;
-  left: 50px;
+  bottom: 0px;
+  right: 0px;
+
 }
 
 .three {
   width: 200px;
   height: 200px;
   background-color: green;
-  position: absolute;
-  top: 50px;
-  left: 50px;
+  position: relative;
+  top: -200px;
+
 }
 
 .four {
@@ -35,6 +36,4 @@ body {
   height: 100px;
   background-color: blue;
   position: absolute;
-  top: 50px;
-  left: 50px;
 }
